Fixes a bug in IE 11
`visibility: hidden` was being treated too much like `display: none`

--- a/app/assets/stylesheets/story.scss
+++ b/app/assets/stylesheets/story.scss
@@ -215,7 +215,7 @@ input.link_input {
   z-index: 5;
   width: 100%;
   height: 100%;
-  visibility: hidden;
+  opacity: 0.01;
 }
 .report-image-status {
   display: none;
